# salary_aggregator

./: .gitignore  compose.yaml  pyproject.toml
app/: dockerfile  requirements.txt
app/src/: main.py
app/src/containers/: container.py
app/src/core/: config.py
app/src/db/: mongo.py
app/src/exeptions/: base.py
app/src/handlers/: salary.py
app/src/models/: filters.py  schemas.py
app/src/services/: mongo_service.py
