[tool.poetry]
name = "salary-aggregator"
version = "0.1.0"
description = ""
authors = ["egor nikitin <eanikitin90gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.3"
pydantic-settings = "^2.2.1"
aiogram = "3.1.0"
dependency-injector = "^4.41.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
